--- a/app/index.html
+++ b/app/index.html
@@ -55,10 +55,20 @@
 
       <md-list>
         <md-item ng-repeat="page in Site.pages">
-            <md-button ng-click="Site.selectPage(page)" ng-class="{'selected' : page === Site.selected }">
-              <!-- <md-icon md-svg-icon="{{page}}" class="avatar"></md-icon> -->
-             {{page.name}}
-            </md-button>
+          <div ng-switch on="page.type">
+            <div ng-switch-when="dir">
+              <md-button ng-click="Site.selectPage(page)" ng-class="{'selected' : page === Site.selected }">
+                <!-- <md-icon md-svg-icon="{{page}}" class="avatar"></md-icon> -->
+                {{page.name}}
+              </md-button>
+            </div>
+            <div ng-switch-when="file">
+              <md-button ng-click="Site.selectPage(page)" ng-class="{'selected' : page === Site.selected }">
+                <!-- <md-icon md-svg-icon="{{page}}" class="avatar"></md-icon> -->
+                {{page.name}}
+              </md-button>
+            </div>
+          </div>
         </md-item>
       </md-list>
     </md-sidenav>
@@ -70,7 +80,7 @@
           <md-icon md-svg-icon="menu" ></md-icon>
         </md-button>
         <h1>EndaMcCormack.com</h1>
-        <span style="width:100%;"></span><h1 style="font-weight:700; margin-right:50px; background: red; padding:5px;">ALPHA</h1></span>
+        <span style="width:100%;"></span><h1 style="font-weight:700; margin-right:100px; padding:5px; border-radius: 3px;" class="accent-color">ALPHA</h1></span>
       </md-toolbar>
       <span id="page-title">
         <h2  aria-describedby="headings-output" class="md-display-2">{{Site.selected}}</h2>
@@ -80,12 +90,13 @@
     <div flex layout="row">
 
       <div id="main-wrapper" class="full-width">
-        {{}}
+        <div id="views" ng-view></div>
       </div>
 
     </div>
 
     <script src="./bower_components/angular/angular.js"></script>
+    <script src="./bower_components/angular-route/angular-route.js"></script>
     <script src="./bower_components/angular-animate/angular-animate.js"></script>
     <script src="./bower_components/angular-aria/angular-aria.js"></script>
     <script type="text/javascript" src="./bower_components/angular-material/angular-material.js"></script>
@@ -93,6 +104,8 @@
 <!--    <script src="./src/site/users/Users.js"></script>
     <script src="./src/site/users/UserController.js"></script>
     <script src="./src/site/users/UserService.js"></script> -->
+
+    <script src="./src/route/RouteController.js"></script>
 
     <script src="./src/site/Site.js"></script>
     <script src="./src/site/SiteController.js"></script>
